@@ -28,9 +28,6 @@ internal class SSRspoil {
 		}
 		public override void OnChoose(Player player, int itemsource) {
 			int type = ModContent.ItemType<WorldEssence>();
-			if (Main.rand.NextFloat() <= .01f) {
-				type = ModContent.ItemType<PerkDebugItem>();
-			}
 			player.QuickSpawnItem(player.GetSource_OpenItem(itemsource), type);
 			LootBoxBase.GetSkillLootbox(itemsource, player);
 			IEntitySource entitySource = player.GetSource_OpenItem(itemsource);
