@@ -16,6 +16,7 @@ internal class MainDebugUI : UIState {
 	UIText open_SkillUI;
 	UIText open_RelicUI;
 	UIText open_ArtifactUI;
+	UIText open_perkUI;
 	UIText exit_Menu;
 	public override void OnInitialize() {
 		Roguelike_Panel = new();
@@ -63,6 +64,13 @@ internal class MainDebugUI : UIState {
 		open_ArtifactUI.MarginTop = open_SpoilUI.Height.Pixels + open_RelicUI.MarginTop + 40;
 		panel.Append(open_ArtifactUI);
 
+		open_perkUI = new("Perk menu", 1.5f);
+		open_perkUI.OnLeftClick += Open_perkUI_OnLeftClick;
+		open_perkUI.OnUpdate += Universal_OnUpdate;
+		open_perkUI.OnMouseOver += Universal_MouseOver;
+		open_perkUI.MarginTop = open_ArtifactUI.Height.Pixels + open_ArtifactUI.MarginTop + 40;
+		panel.Append(open_perkUI);
+
 		exit_Menu = new("Back", 1.5f);
 		exit_Menu.OnLeftClick += Exit_Menu_OnLeftClick;
 		exit_Menu.OnUpdate += Exit_Menu_OnUpdate;
@@ -70,6 +78,11 @@ internal class MainDebugUI : UIState {
 		exit_Menu.HAlign = 1f;
 		exit_Menu.VAlign = 1f;
 		panel.Append(exit_Menu);
+	}
+
+	private void Open_perkUI_OnLeftClick(UIMouseEvent evt, UIElement listeningElement) {
+		SoundEngine.PlaySound(SoundID.MenuOpen);
+		ModContent.GetInstance<UniversalSystem>().ActivateDebugUI("perk");
 	}
 
 	private void Open_ArtifactUI_OnLeftClick(UIMouseEvent evt, UIElement listeningElement) {
@@ -123,6 +136,14 @@ internal class MainDebugUI : UIState {
 			}
 			else {
 				open_ArtifactUI.TextColor = Color.White;
+			}
+		}
+		else if (affectedElement.UniqueId == open_perkUI.UniqueId) {
+			if (affectedElement.IsMouseHovering) {
+				open_perkUI.TextColor = Color.Yellow;
+			}
+			else {
+				open_perkUI.TextColor = Color.White;
 			}
 		}
 	}
